# skid

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: gst_pipes.md
docs/camera/: calibration.md
docs/install/: 01-setup_and_dependency.md
docs/install/files/: .tmux.conf
gz/: CMakeLists.txt
gz/models/box/: model.config  model.sdf
gz/models/calibration_board/: model.config  model.sdf
gz/models/red_husky/: model.sdf
gz/models/skid_rover/: model.sdf
gz/plugins/: CMakeLists.txt
gz/plugins/ardupilot/: ArduPilotPlugin.cc
gz/plugins/gst_camera/: README.md  gst_camera_plugin.cpp
gz/tools/: CMakeLists.txt  demo.cpp  image_converter.cpp  image_converter.hpp  test.cpp
gz/worlds/: rover_ardupilot.world
scripts/: gz_launch.sh
src/: app.py  log.config
src/fcu/: context.py  settings.json  settings.py  vehicle.py  vision.py
src/fcu/hw/: gst.py  mav.py  video_stream.py
src/fcu/logic/: fuse.py  lk_tracker.py  vehicle.py  video_viewer.py
src/utils/: pid.py  py_tools.py  rc_tools.py
test_code/: CMakeLists.txt  py_examples.py
test_code/cv/: README.md  cv_cpp.cpp  cv_gst_reader.cpp  cv_gst_sender.cpp
test_code/optic_flow/: lk.py
test_code/trackers/: test_tracker.py
tools/: CMakeLists.txt  gz2loopback.cpp  gz_env.sh
